@@ -19,6 +19,7 @@ Other features
 
  * Added ``construct_page_listing_buttons`` hook (Michael van Tellingen)
  * Added more detailed documentation and troubleshooting for installing OpenCV for feature detection (Daniele Procida)
+ * Move and refactor upgrade notification JS (Jonny Scholes)
 
 
 Bug fixes
